--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -46,8 +46,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="480929129">
 							<int key="NSColorSpace">3</int>
@@ -60,7 +58,6 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="628473320"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -82,7 +79,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="110862525"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -97,8 +93,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="480929129"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -135,7 +129,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 102}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859793055"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -147,8 +140,6 @@
 				<array class="NSMutableArray" key="NSSubviews"/>
 				<string key="NSFrameSize">{320, 100}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -162,7 +153,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{20, 6}, {280, 32}}</string>
 						<reference key="NSSuperview" ref="108938310"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="669691704"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -194,8 +184,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{20, 38}, {280, 32}}</string>
 						<reference key="NSSuperview" ref="108938310"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -219,7 +207,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 23}, {280, 32}}</string>
 						<reference key="NSSuperview" ref="108938310"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="358789078"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -249,7 +236,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="416606569"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -264,7 +250,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 6}, {235, 30}}</string>
 						<reference key="NSSuperview" ref="540827321"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="729496560"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -303,7 +288,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 42}, {235, 30}}</string>
 						<reference key="NSSuperview" ref="540827321"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="819982339"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -333,8 +317,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{251, 23}, {64, 32}}</string>
 						<reference key="NSSuperview" ref="540827321"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -354,7 +336,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1041697428"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -369,7 +350,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{160, 55}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557796993"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -390,7 +370,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{66, 4}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="831914894"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -405,7 +384,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 32}, {160, 21}}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="826027134"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -441,7 +419,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{160, 0}, {160, 55}}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="51485544"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -462,7 +439,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{226, 4}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1042684277"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -477,8 +453,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{160, 34}, {160, 21}}</string>
 						<reference key="NSSuperview" ref="611795173"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -500,14 +474,13 @@
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="808024115"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="913665850">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUISegmentedControl" id="763275925">
@@ -515,8 +488,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{80, 6}, {161, 44}}</string>
 						<reference key="NSSuperview" ref="913665850"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -545,8 +516,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="763275925"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -561,8 +530,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 69}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="328273835"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -591,7 +558,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 159}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="884400685"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -602,8 +568,6 @@
 				<int key="NSvFlags">274</int>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -638,8 +602,6 @@
 				<int key="NSvFlags">274</int>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -1150,156 +1112,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">110</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">UserViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="loadPhoto:">id</string>
-						<string key="segmentedControlIndexChanged">id</string>
-						<string key="userLogin:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="loadPhoto:">
-							<string key="name">loadPhoto:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="segmentedControlIndexChanged">
-							<string key="name">segmentedControlIndexChanged</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogin:">
-							<string key="name">userLogin:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="configTable">UITableView</string>
-						<string key="list">UITableView</string>
-						<string key="listEmptyView">UIView</string>
-						<string key="listEmptyViewLabel">UILabel</string>
-						<string key="listHeaderBlocksButton">UIButton</string>
-						<string key="listHeaderBlocksLabel">UILabel</string>
-						<string key="listHeaderPinsButton">UIButton</string>
-						<string key="listHeaderPinsLabel">UILabel</string>
-						<string key="listHeaderView">UIView</string>
-						<string key="scroll">UIScrollView</string>
-						<string key="segmentedControl">UISegmentedControl</string>
-						<string key="userImageButton">UIButton</string>
-						<string key="userImageImageView">UIImageView</string>
-						<string key="userImageView">UIView</string>
-						<string key="userInfo">UIView</string>
-						<string key="userInfoPressed">UIView</string>
-						<string key="userInfoPressedButtonOk">UIView</string>
-						<string key="userInfoPressedEmailEditText">UITextField</string>
-						<string key="userInfoPressedNameEditText">UITextField</string>
-						<string key="userInfoUnpressed">UIView</string>
-						<string key="userInfoUnpressedEmail">UILabel</string>
-						<string key="userInfoUnpressedName">UILabel</string>
-						<string key="userInfoUnpressedWarningText">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="configTable">
-							<string key="name">configTable</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="list">
-							<string key="name">list</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyView">
-							<string key="name">listEmptyView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyViewLabel">
-							<string key="name">listEmptyViewLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksButton">
-							<string key="name">listHeaderBlocksButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksLabel">
-							<string key="name">listHeaderBlocksLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsButton">
-							<string key="name">listHeaderPinsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsLabel">
-							<string key="name">listHeaderPinsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderView">
-							<string key="name">listHeaderView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scroll">
-							<string key="name">scroll</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="segmentedControl">
-							<string key="name">segmentedControl</string>
-							<string key="candidateClassName">UISegmentedControl</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageButton">
-							<string key="name">userImageButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageImageView">
-							<string key="name">userImageImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageView">
-							<string key="name">userImageView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfo">
-							<string key="name">userInfo</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressed">
-							<string key="name">userInfoPressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedButtonOk">
-							<string key="name">userInfoPressedButtonOk</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedEmailEditText">
-							<string key="name">userInfoPressedEmailEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedNameEditText">
-							<string key="name">userInfoPressedNameEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressed">
-							<string key="name">userInfoUnpressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedEmail">
-							<string key="name">userInfoUnpressedEmail</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedName">
-							<string key="name">userInfoUnpressedName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedWarningText">
-							<string key="name">userInfoUnpressedWarningText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UserViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
